--- a/css/yanxuanpc.css
+++ b/css/yanxuanpc.css
@@ -19,11 +19,18 @@
 .header .top_nav .right>ul{
 	position: absolute;	
 	right: 0;
+	margin: 0.9em 0;
+	padding: 0
 }
 .header .top_nav .right>ul>li{
 	float: left;
-	margin-right:20px;
-	line-height: 36px;
+	line-height: 1.4em;
+	padding:0 0.9em;
+	border-right: 0.5px solid #888;
+}
+.header .top_nav .right>ul>li:first-child,
+.header .top_nav .right>ul>li:last-child{
+	border-right: 0;
 }
 .header .top_nav .right>ul>li>a{
 	color: #ccc;
@@ -516,12 +523,14 @@
 }
 .sub_nav{
 	display: none;
+	background-color: #fff;
 }
 .header .bottom_nav .wrap>ul>li:hover>.sub_nav{
 	display: block;
 }
 .wrap{
 	width: 1090px;
+	/*min-width: 1200px;*/
 	margin: 0 auto;
 }
 .header .top_nav .wrap::after,
@@ -529,4 +538,399 @@
 	content: "";
 	display: block;
 	clear: both;
+}
+
+
+
+
+
+
+.container .content1{
+	height: 420px;
+	background-image: url(../images/顶部动图.jpg);
+	animation:dingbu 20s both steps(8) infinite;
+	width: 1349px;
+	margin: 0 auto;
+	position: relative;
+}	
+@keyframes dingbu{
+	100%{
+		background-position: -15360px;
+	}
+}
+.container .content1 .bottom_button{
+	width: 250px;
+	margin:auto;
+	/*background-color: teal;*/
+	text-align: center;
+	position: absolute;
+	bottom: 10px;
+	left: 50%;
+	margin-left: -125px;
+}
+.container .content1 .bottom_button ul{
+	display: flex;
+	justify-content: space-around;
+}
+.container .content1 .bottom_button ul li{
+	width:7px;
+	height: 7px;
+	background-color: #fff;
+	border-radius: 50%;
+}
+.container .content1 .bottom_button ul li:hover{
+	background-color: #a7936e;
+	box-shadow: 0 0 10px #dfcead;
+}
+
+
+
+.container .content2 .wrap,
+.container .content3 .wrap,
+.container .content4 .wrap{
+	width: 1090px;
+	/*height: 369px;*/
+	margin: 0 auto;
+	margin-top: 30px;
+}
+.container .content2 .title .a1>h3,
+.container .content3 .title .a1>h3,
+.container .content4 .title .a1>h3{
+	font-size: 28px;
+	font-weight: 700px;
+	float: left;
+}
+.container .content2 .title a:hover,
+.container .content3 .title a:hover,
+.container .content4 .title a:hover{
+	color: #bfae8c;
+}
+.container .content2 .title span,
+.container .content3 .title span{
+	font-size: 14px;
+	float: left;
+	margin-left: 10px;
+	line-height: 50px;
+}
+.container .content2 .title .a2,
+.container .content3 .title .a2,
+.container .content4 .title .a2{
+	font-size: 14px;
+	float: right;
+	line-height: 50px;
+}
+.container .content2 .title::after,
+.container .content2 .link::after,
+.container .content3 .title::after,
+.container .content3 .link::after,
+.container .content4 .title::after,
+.container .content4 .link::after{
+	content: "";
+	display: block;
+	clear: both;
+}
+.container .content2 .link>ul>li{
+	float: left;
+	width: 357px;
+	height: 320px;
+	margin-right: 9.5px;
+	overflow: hidden;
+}
+.container .content2 .link>ul>li:nth-child(3),
+.container .content2 .link>ul>li:nth-child(4){
+	height: 155px;
+	margin-right: 0;
+}
+.container .content2 .link>ul>li:nth-child(4){
+	margin-top: 10px;
+}
+.container .content2 .link>ul>li .img{
+	width: 100%;
+	height: 100%;
+	transition: transform 1s;
+}
+.container .content2 .link>ul>li:hover >.img{
+	transform: scale(1.1);
+}
+.container .content2 .link>ul>li:nth-child(1) .img{
+	background-image: url(../images/content2/content2_link_li1.png);
+}
+.container .content2 .link>ul>li:nth-child(2) .img{
+	background-image: url(../images/content2/content2_link_li2.png);
+}
+.container .content2 .link>ul>li:nth-child(3) .img{
+	background-image: url(../images/content2/content2_link_li3.png);
+}
+.container .content2 .link>ul>li:nth-child(4) .img{
+	margin-top: 10px;
+	background-image: url(../images/content2/content2_link_li4.png);
+}
+
+.container .content2 .link>ul li .font{
+	position: absolute;
+	width: 357px;
+	z-index: 20;
+}
+.container .content2 .link>ul>li .font .name,
+.container .content2 .link>ul>li .font .price{
+	text-align: center;
+}
+.container .content2 .link>ul>li .font .name{
+	margin: 48px 0 19px;
+}
+.container .content2 .link>ul>li:nth-child(3) .font .name,
+.container .content2 .link>ul>li:nth-child(4) .font .name{
+	margin: 32px 0 10px 20px;
+	text-align: left;
+}
+.container .content2 .link>ul>li .font .price{
+	padding-top: 17px;
+	border-top: 1px solid #000;
+	font-size: 14px;
+	display: inline-block;	
+	width: auto;
+	/*margin-left: 160px;*/
+}
+.container .content2 .link>ul>li:nth-child(3) .font .price,
+.container .content2 .link>ul>li:nth-child(4) .font .price{
+	margin-left: 20px;
+}
+.container .content2 .link>ul>li .name>span{
+	font-size: 24px;
+}
+
+
+.container .content3 .wrap{
+	position: relative;
+}
+.container .content3{
+	height: 450px;
+	margin-top: 60px;
+}
+.container .content3 .link>ul{
+	display: flex;
+	justify-content: space-between;
+}
+.container .content3 .link>ul>li{
+	float: left;
+	width: 265px;
+	height: 344px;
+}
+.container .content3 .link>ul>li .img{
+	width: 100%;
+	height: 265px;
+}
+.container .content3 .link>ul>li .img>ul>li:first-child{
+	background-color: #fff;
+}
+.container .content3 .link>ul>li .img>ul>li:last-child{
+	position: relative;
+	margin-top: -265px;
+	opacity: 0;
+}
+.container .content3 .link>ul>li:hover>.img ul>li:first-child{
+	opacity: 0;
+}
+.container .content3 .link>ul>li:hover>.img ul>li:last-child{
+	opacity: 1;
+}
+.container .content3 .link>ul>li .font{
+	text-align: center;
+}
+.container .content3 .link>ul>li:hover>.font{
+	background-color: #f4f0ea;
+}
+.container .content3 .link>ul>li .font .top{
+	margin-top: 5px;
+}
+.container .content3 .link>ul>li .font .top span{
+	line-height: 30px;
+	font-size: 12px;
+	padding:2px;
+	color: #fff;
+}
+.container .content3 .link>ul>li .font .top span:first-child{
+	background-color: #f28f2d;
+}
+.container .content3 .link>ul>li .font .top span:nth-child(2){
+	background-color: #e36844;
+}
+.container .content3 .link>ul>li .font .name{
+	line-height: 20px;
+}
+.container .content3 .link>ul>li .font .name a:hover{
+	color: #bfae8c;
+}
+.container .content3 .link>ul>li .font .price{
+	font-size: 13px;
+	line-height: 20px;
+	color: #e36844;
+}
+.content3 .left_button,
+.content3 .right_button{
+	position: absolute;
+	font-size: 50px;
+}
+.content3 .left_button i,
+.content3 .right_button i{
+	color: #d0c4af;
+}
+.content3 .left_button i:hover,
+.content3 .right_button i:hover{
+	color: #b19e7a;
+}
+.content3 .left_button{
+	left: -50px;
+	top: 50%;
+	margin-top: -25px;
+}	
+.content3 .right_button{
+	right: -50px;
+	top: 50%;
+	margin-top: -25px;
+}
+
+
+
+.content4{
+	width: 100%;
+	background-color: #f4f0ea;
+}
+.content4 .title ul{
+	float: left;
+	margin-left: 40px;
+}
+.content4 .title ul::after{
+	content: "";
+	display: block;
+	clear: both;
+}
+.content4 .title ul li{
+	float: left;
+	line-height: 28px;
+	margin-right: 60px;
+	margin-top: 5px;
+}
+.content4 .title ul>li a{
+	font-size: 14px;
+}
+.content4 .title ul>li:first-child{
+	border-bottom: 2px solid #bfae8c;
+}
+.content4 .title ul>li:first-child a{
+	color: #bfae8c;
+}
+.content4 .title ul>li:hover>a{
+	color: #bfae8c;
+}
+.content4 .title ul>li:hover{
+	border-bottom: 2px solid #bfae8c;
+}
+.content4 .link::after{
+	content: "";
+	display: block;
+	clear: both;
+}
+.content4 .link ul>li{
+	float: left;
+	width: 223px;
+	height: 260px;
+	margin-right: 10px;
+	margin-bottom: 10px;
+	background-color: #fff;
+}
+.content4 .link ul>li:first-child{
+	width: 390px;
+	height: 530px;
+}
+.content4 .link ul>li:nth-child(4),
+.content4 .link ul>li:nth-child(7){
+	margin-right: 0;
+}
+.content4 .link ul>li:nth-child(1),
+.content4 .link ul>li:nth-child(5),
+.content4 .link ul>li:nth-child(6),
+.content4 .link ul>li:nth-child(7){
+	margin-bottom: 0;
+}
+.content4 .link ul>li:first-child .top{
+	height: 410px;
+}
+.content4 .link ul>li .top .img{
+	transition: transform 1s;
+	margin: 0 auto;
+}
+.content4 .link ul>li:first-child .top .img img{
+	width: 320px;
+	height: 320px;
+	margin: 40px 35px 40px 35px;
+}
+.content4 .link ul>li .top{
+	height: 180px;
+	border-bottom: 1px solid #ededed;
+	position: relative;
+}
+.content4 .link ul>li .top .img img{
+	width: 180px;
+	height: 180px;
+	margin: 0 21.5px;
+}
+.content4 .link ul>li:hover>.top .img{
+	transform: scale(1.1);
+}
+.content4 .link ul>li .top .little{
+	border-radius: 5px;
+	border:1px solid #bfae8c;
+	display: inline-block;
+	position: absolute;
+	top: 10px;
+	left: 10px;
+	background-color: #f4f0ea;
+	padding: 0 5px;
+}
+.content4 .link ul>li .top .little a{
+	color: #bfae8c;
+}
+.content4 .link>ul>li .font{
+	text-align: center;
+}
+.content4 .link>ul>li:first-child .font .font_top{
+	margin-top: 15px;
+}
+.content4 .link>ul>li:first-child .font .font_top span{
+	line-height: 30px;
+	font-size: 12px;
+	padding:2px;
+	color: #fff;
+}
+.content4 .link>ul>li:first-child .font .font_top span:first-child{
+	background-color: #f28f2d;
+}
+.content4 .link>ul>li:first-child .font .font_top span:nth-child(2){
+	background-color: #e36844;
+}
+.content4 .link>ul>li .font .name{
+	line-height: 20px;
+	font-size: 12px;
+	margin-top: 30px;
+}
+.content4 .link>ul>li:first-child .font .name{
+	line-height: 20px;
+	font-size: 18px;
+	margin-top: 10px;
+}
+.content4 .link>ul>li .font .name a:hover{
+	color: #bfae8c;
+}
+.content4 .link>ul>li .font .price{
+	font-size: 13px;
+	line-height: 18px;
+	color: #e36844;
+	margin-top: 5px;
+}
+.content4 .link>ul>li:first-child .font .price{
+	font-size: 18px;
+	line-height: 18px;
+	color: #e36844;
+	margin-top: 10px;
 }
